2011-07-14  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Remove limits so we always scale, and use on_size_allocate().

	* glom/utility_widgets/imageglom.[h|cc]: Use on_size_allocate() instead of 
	on_draw(), which is slightly wiser.
	Remove the hard-coded checks for minumum and maximum sizes, because 
	we get an initial allocation of 1, and because the max was arbitrarily small.
	* glom/utils_ui.cc: Fix this for images that are both 
	too wide and too high.
	
	This works now, but we still need to make the window get smaller when 
	the GtkImage requests less space.


2011-07-13  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Remove hard-coded mentions of PNG file formats.

	* glom/utility_widgets/imageglom.cc: Open With: Use the actual (sniffed)
	mime type.
	Clipboard: Try to use the actual mime type, though this does not seem to 
	work for any mime type now.

2011-07-13  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Show the missing image icon again.

	* glom/utility_widgets/imageglom.cc: set_value(): Clear the data, not the 
	pixbuf.
	show_image_data(): Check for empty data and show the missing icon if so.

2011-07-13  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Make the context-menu work with the EvView.

	* glom/utility_widgets/imageglom.cc: Connect to the widget's own signal.

2011-07-13  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Loading/Saving: Add more FileChooser filters.

	* glom/utility_widgets/imageglom.cc: set_file_filter_images():
	Use ev_document_factory_add_filters().

2011-07-13  Murray Cumming  <murrayc@murrayc.com>

	Image fields: Support PDF (and other types supported by evince)

	* configure.ac: Depend on evince-view-3.0, which is a library installed by 
	evince. It is packaged separately from evince by distros.
	* glom/main.cc: Call ev_init().
	* glom/utility_widgets/dialog_image_load_progress.[h|cc]: Remove 
	get_pixbuf() and do not use Gdk::PixbufLoader here.